--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #DBE4EF;
     --card-front-color: #fa5ab2;
-    --card-back-color: #3f1557;
+    --card-back-color: #500505;
 }
 
 body {
@@ -10,7 +10,11 @@ body {
 }
 
 #container {
-    display: flex; 
+    display: flex;
+     flex-wrap: wrap;
+     justify-content: space-between;
+     padding: 4rem;
+     gap: 3rem;
 }
 
 .cartao {
@@ -86,6 +90,6 @@ footer {
 
 footer p {
     text-align: center;
-    font-size: 0.6rem;
+    font-size: 0.9rem;
     margin-top: 0.5rem;
 }
