--- a/assets/style.css
+++ b/assets/style.css
@@ -45,11 +45,11 @@ body {
     backface-visibility: hidden;
 }
 
-
 .cartao__conteudo p {
     margin-top: 1rem;
     padding: 2rem;
     margin-top: 4rem;
+    font-size: 1.4vw;
 }
 
 .cartao__conteudo__pergunta p {
@@ -62,21 +62,24 @@ body {
     font-weight: 700;
 }
 
-.cartao:hover .cartao__conteudo {
+.cartao:active .cartao__conteudo {
     transform: rotateY(180deg);
 }
 
-.cartao__conteudo__pergunta,
-.cartao__conteudo__resposta {
+.cartao_conteudo_pergunta,
+.cartao_conteudo_resposta {
     backface-visibility: hidden;
     position: absolute;
     height: 100%;
     width: 100%;
+    box-sizing: border-box;
 }
 
-.cartao__conteudo__resposta {
-    transform: rotateY(180deg);
-}
+ .cartao__conteudo__resposta{
+        transform: rotateY(180deg);
+        background-color: rgba(0, 244, 191, 0.2);
+        border: 4px solid var(--card-back-color);
+    }
 
 
 footer {
@@ -92,4 +95,14 @@ footer p {
     text-align: center;
     font-size: 0.9rem;
     margin-top: 0.5rem;
+}
+
+
+
+@media (max-width: 560px) {
+
+    body {
+        background: url('img/bd-mobile.jpg');
+    }
+
 }
